--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "obsidian-markmap",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "This is a markmap plugin for Obsidian.",
   "author": {
     "name": "hypc",
@@ -18,21 +18,22 @@
     "build": "gulp build"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.0.6",
-    "@rollup/plugin-typescript": "^8.3.0",
-    "del": "^6.0.0",
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^9.0.2",
+    "del": "<7.0.0",
     "gulp": "^4.0.2",
     "gulp-less": "^5.0.0",
-    "obsidian": "^0.12.17",
-    "rollup": "^2.60.1",
+    "obsidian": "^0.16.3",
+    "rollup": "^3.2.5",
     "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.3.1",
     "typescript": "^4.5.2",
-    "vinyl": "^2.2.1"
+    "vinyl": "^3.0.0"
   },
   "dependencies": {
-    "markmap-lib": "^0.11.6",
-    "markmap-view": "^0.2.6"
+    "markmap-common": "^0.14.2",
+    "markmap-lib": "^0.14.3",
+    "markmap-view": "^0.14.3"
   }
 }
